<resources>
    <string name="app_name">Shipr</string>
    <string name="shared_preferences_user_data">uk.ac.tees.com2060.oreo.USER_DATA</string>
    <string name="shared_preferences_user_data_api_key">uk.ac.tees.com2060.oreo.USER_DATA.API_KEY</string>
    <string name="okay">Okay</string>
    <string name="submitting">Submitting...</string>
    <string name="validation_complete_all_fields">You must fill in all of the available fields to proceed!</string>
    <string name="validation_invalid_postcode">You\'ve entered an invalid postcode - please check it</string>
    <string name="validation_invalid_phone_number">You\'ve entered an invalid mobile number - please check it</string>
    <string name="validation_invalid_password">You\'ve entered passwords that do not match - please check them</string>
    <string name="activity_style_guide_title">Style Guide</string>
    <string name="activity_welcome_sign_up_text">Not got an account yet? \n It\'s super simple to join Shipr!</string>
    <string name="activity_welcome_sign_up_button">Sign Up</string>
    <string name="activity_welcome_login_email">Email Address</string>
    <string name="activity_welcome_login_password">Password</string>
    <string name="activity_welcome_login_forgot_password">Forgotten your password?</string>
    <string name="activity_welcome_login_button">Log In</string>
    <string name="activity_register_step1_title">Step 1 of 2</string>
    <string name="activity_register_step1_full_name">Full name (e.g. John Doe)</string>
    <string name="activity_register_step1_known_as">Known as (e.g. John)</string>
    <string name="activity_register_step1_dob">Date of Birth</string>
    <string name="activity_register_step1_well_info">We just need to know a little bit about you - be sure to upload a profile photo!</string>
    <string name="activity_register_step1_well_next_step">Next Step</string>
    <string name="activity_register_step1_no_profile_photo">You haven\'t set a profile photo - would you like to set one before continuing?</string>
    <string name="activity_register_step1_no_profile_photo_yes">Yep!</string>
    <string name="activity_register_step1_no_profile_photo_no">No thanks</string>
    <string name="activity_register_step2_title">Step 2 of 2</string>
    <string name="activity_register_step2_nearly_there">You\'re nearly there, %1$s!</string>
    <string name="activity_register_step2_postcode">Postcode</string>
    <string name="activity_register_step2_phone_number">Mobile Number</string>
    <string name="activity_register_step2_email_address">Email Address</string>
    <string name="activity_register_step2_password">Password</string>
    <string name="activity_register_step2_confirm_password">Confirm Password</string>
    <string name="activity_register_step2_well_info">By completing registration, you agree to follow our Terms and Conditions</string>
    <string name="activity_register_step2_well_sign_up">Sign Up</string>
    <string-array name="demo_spinner_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="demo_spinner_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="demo_spinner_year">
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_past_listings">My Listings</string>
    <string name="menu_list">List an Item</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="fragment_dashboard_title">Dashboard</string>
    <string name="API_BASE_URL">https://getshipr.com/api/</string>
    <string name="fragment_list_item_title">List an Item</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="fragement_profile_title">Your Profile</string>
    <string name="fragment_profile_known_as">username</string>
    <string name="package_size_0">Small</string>
    <string name="package_size_1">Medium</string>
    <string name="package_size_2">Large</string>
    <string name="package_size_3">XLarge</string>
</resources>