<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:background="@color/colorWhite"
        android:focusableInTouchMode="true"
        tools:context="uk.ac.tees.com2060.oreo.RegisterStep2Fragment"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3">

        <EditText
            android:id="@+id/editText_confirm_password"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/activity_register_step2_confirm_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_far_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_far_left"
            app:layout_constraintTop_toBottomOf="@+id/editText_password" />

        <EditText
            android:id="@+id/editText_postcode"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/activity_register_step2_postcode"
            android:inputType="textCapCharacters|textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/editText_phone_number"
            app:layout_constraintEnd_toStartOf="@+id/guideline_far_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_far_left"
            app:layout_constraintTop_toBottomOf="@+id/textView_hey" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_far_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_centre_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_centre_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_far_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <EditText
            android:id="@+id/editText_phone_number"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/activity_register_step2_phone_number"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/editText_email_address"
            app:layout_constraintEnd_toStartOf="@+id/guideline_far_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_far_left"
            app:layout_constraintTop_toBottomOf="@+id/editText_postcode" />

        <EditText
            android:id="@+id/editText_email_address"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/activity_register_step2_email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editText_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline_far_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_far_left"
            app:layout_constraintTop_toBottomOf="@+id/editText_phone_number" />

        <EditText
            android:id="@+id/editText_password"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/activity_register_step2_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/editText_confirm_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline_far_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_far_left"
            app:layout_constraintTop_toBottomOf="@+id/editText_email_address" />

        <TextView
            android:id="@+id/textView_hey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/activity_register_step2_nearly_there"
            android:textAppearance="@style/AppTheme.Header3"
            app:layout_constraintBottom_toTopOf="@+id/editText_postcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/colorWhite">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/well_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_next_step"
                style="@style/AppTheme.ButtonDisabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:enabled="false"
                android:text="@string/activity_register_step2_well_sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/activity_register_step2_well_info"
                android:textAlignment="center"
                android:textAppearance="@style/AppTheme.BodyText"
                app:layout_constraintBottom_toTopOf="@+id/button_next_step"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>